--- a/client/app/views/home/padrao.ejs
+++ b/client/app/views/home/padrao.ejs
@@ -1,22 +1,98 @@
 <!DOCTYPE HTML>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
 
-		<title>Instagram Clone - WEB</title>
-		
-		<!-- JQuery -->
-		<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+<head>
+	<meta charset="UTF-8">
 
-		<!-- bootstrap - link cdn -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	
-		<!-- incluindo css -->
-		<link href="css/style.css" rel="stylesheet">
+	<title>Instagram Clone - WEB</title>
 
-		<script>
-			$(document).ready(function(){
+	<!-- JQuery -->
+	<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
 
+	<!-- bootstrap - link cdn -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+	<!-- incluindo css -->
+	<link href="css/style.css" rel="stylesheet">
+
+	<script>
+		$(document).ready(function(){
+
+				function carrega_postagens(){
+					var xhr = new XMLHttpRequest();
+					xhr.open('GET', 'http://localhost:8080/api/')
+
+					xhr.onload = function(){
+						if(xhr.status === 200){
+							var data = $.parseJSON(xhr.responseText);
+							for (i = 0; i< data.length; i++){
+								$('#container_timeline').append(
+									'<div class="publicacao">'+
+										'<img style="width: 100%" src="http://localhost:8080/uploads/'+data[i].url_imagem+'" />'+
+										'<span class="titulo">'+
+											data[i].titulo + 
+										'</span>'+
+										'<div class="comentarios" id="comentarios_'+data[i]._id+'"></div>'+
+										'<div class="comentar"> '+
+											'<input type="text" class="form-control input_comentario" id="'+data[i]._id+'" placeholder="adicione um comentário">'+
+											'<button class="btn btn-default btn_postagem" value="'+data[i]._id+'" type="button" >Comentar</button>'+
+											'</div>'+
+									'<div>'
+								)
+								if(data[i].comentarios != undefined){
+									var comentarios = data[i].comentarios;
+
+									for(j=0; j< comentarios.length; j++){
+										$('#comentarios_'+data[i]._id).append(
+											'<div class="txt_comentario">'+
+												'<button type="button" class="btn btn-default btn_remover_postagem" value="'+comentarios[j].id_comentario+'">X</button>'+
+												comentarios[j].comentario+
+												'</div>'
+										)
+									}
+								}
+							}
+
+							$('.btn_remover_postagem').click(function(){
+								var id_comentario = this.value;
+
+								var xhr = new XMLHttpRequest();
+								xhr.open('DELETE', 'http://localhost:8080/api/'+id_comentario);
+								xhr.setRequestHeader('content-type', 'application/json');
+
+
+								xhr.onload = function(){
+									if(xhr.status === 200){
+										window.location.href = '/home'
+									}
+								}
+								xhr.send();
+							});
+							$('.btn_postagem').click(function(){
+								var id = this.value;
+								var comentario = $('#'+ id).val();
+
+								var xhr = new XMLHttpRequest();
+								xhr.open('PUT', 'http://localhost:8080/api/'+id);
+								xhr.setRequestHeader('content-type', 'application/json');
+
+								xhr.onload = function(){
+									if(xhr.status === 200){
+										window.location.href = '/home'
+									}
+								}
+								xhr.send(JSON.stringify({comentario: comentario}));
+							})
+						}
+						// if(xhr.status === 300){
+						// 	alert('tudo ok!');
+						// }
+					}
+
+					xhr.send();
+				}
+
+				carrega_postagens();
 				$('#btn_incluir').click(function(){
 					$('#container_timeline').hide();
 					$('#container_form').show();
@@ -27,37 +103,62 @@
 					$('#container_form').hide();
 					return false;
 				});
+				$('#btn-publicar').click(function(){
+					//criar um formData
+					var formData = new FormData();
+					var arquivo = document.getElementById('arquivo').files[0];
+					var titulo = document.getElementById('titulo').value;
+					formData.append('arquivo', arquivo);
+					formData.append('titulo', titulo);
+
+					//criar xmlhttprequest
+					var xhr = new XMLHttpRequest();
+					//verificar mudanças do estado
+					xhr.onreadystatechange = function(){
+						if(xhr.readyState == 4){
+							var resposta = xhr.responseText;
+							console.log(resposta);
+							document.getElementById('mensagem').innerHTML = resposta;
+						}
+					}
+
+					//fazer o envio do nosso request
+					xhr.open('POST','http://localhost:8080/api/');
+					xhr.send(formData);
+				});
 
 			});
 		</script>
 
-	</head>
+</head>
 
-	<body>
+<body>
 
-		<nav class="navbar navbar-default">
-			<div class="container">
-				<div class="col-md-12">
-					<div class="container-fluid">
-						<img alt="Instagram Clone - Versão WEB" src="images/logo2.jpg" class="logo2">
-						<img alt="Incluir" src="images/incluir.jpg" class="pull-right btn-incluir" id="btn_incluir">						
-					</div>
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<div class="col-md-12">
+				<div class="container-fluid">
+					<img alt="Instagram Clone - Versão WEB" src="images/logo2.jpg" class="logo2">
+					<img alt="Incluir" src="images/incluir.jpg" class="pull-right btn-incluir" id="btn_incluir">
 				</div>
 			</div>
-		</nav>
-
-		<div class="container">
-			<div class="col-md-2"></div>
-			<div class="col-md-8" id="container_timeline"></div>
-			
 		</div>
+	</nav>
+
+	<div class="container">
+		<div class="col-md-2"></div>
+		<div class="col-md-8" id="container_timeline"></div>
+
+	</div>
 
 
-		<div class="container" style="display:none" id="container_form">
-			<div class="panel panel-default">
+	<div class="container" style="display:none" id="container_form">
+		<div class="panel panel-default">
 
-			<div class="panel-heading"><h4>Publicar uma foto</h4></div>
-			
+			<div class="panel-heading">
+				<h4>Publicar uma foto</h4>
+			</div>
+
 			<div class="panel-body">
 				<div class="form-group">
 					<input type="file" name="arquivo" id="arquivo" class="form-control">
@@ -74,5 +175,6 @@
 				<div id="mensagem"></div>
 			</div>
 		</div>
-	</body>
+</body>
+
 </html>
